<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Wysiwyd</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scan_choice">Scan Type</string>
    <string name="title_activity_results">Matches</string>
    <string name="action_new">New Bottle</string>
    <string name="action_edit">Edit</string>
    <string name="background_picture">Bottle picture</string>

    <!-- Main activity -->

    <string name="main_scan">Scan</string>
    <string name="main_search">Search</string>
    <string name="wysiwyd">Wysiwyd</string>

    <!-- Scan Choice -->

    <string name="scanchoice_title">Barcode and QR Code, or NFC</string>
    <string name="scanchoice_barcode_text">Barcode and QR Code</string>
    <string name="scanchoice_nfc_text">NFC</string>

    <!-- Generation Chooser -->

    <string name="generation_chooser_title">Barcode and QR Code, or NFC</string>
    <string name="generation_chooser_barcode_text">QR Code</string>
    <string name="generation_chooser_nfc_text">NFC</string>

    <!-- List Fragment -->

    <string name="list_action_search">Search</string>
    <string name="list_action_sort_mark_desc">Mark desc</string>
    <string name="list_action_sort_mark_asc">Mark asc</string>
    <string name="list_action_sort_vintage_desc">Vintage desc</string>
    <string name="list_action_sort_vintage_asc">Vintage asc</string>
    <string name="list_action_sort_quantity_desc">Quantity desc</string>
    <string name="list_action_sort_quantity_asc">Quantity asc</string>
    <string name="list_action_sort_name_desc">Name desc</string>
    <string name="list_action_sort_name_asc">Name asc</string>

    <!-- Strings for the new/edit bottle fragment -->

    <string name="new_bottle_add_variety">Add</string>
    <string name="action_execute">Done</string>
    <string name="action_abstract_bottle_info_picture">Get Picture</string>
    <string name="action_abstract_bottle_info_image">See</string>

    <!-- Strings for the details fragment -->

    <string name="details_section_colour">Colour</string>
    <string name="details_section_sugar">Sweetness</string>
    <string name="details_section_effervescence">Effervescence</string>
    <string name="details_section_add_date">Added the</string>
    <string name="details_section_apogee">Apogee the</string>
    <string name="details_section_location">Find me there</string>
    <string name="details_section_note">About</string>
    <string name="details_section_code">Scan Code</string>
    <string name="details_section_appellation">Appellation</string>
    <string name="details_section_name">Name</string>
    <string name="details_section_vintage">Vintage</string>
    <string name="details_section_region">Region</string>
    <string name="details_section_quantity">Quantity</string>
    <string name="details_section_price">Price</string>
    <string name="details_section_rating">Rating</string>
    <string name="details_section_varieties">Varieties</string>
    <string name="action_details_image">See</string>
    <string name="details_action_delete">Delete bottle</string>
    <string name="details_delete_popup_message">Are you sure?</string>

    <!-- New bottle arrays -->

    <string-array name="colour_array">
        <item>White</item>
        <item>Red</item>
        <item>Rosé</item>
    </string-array>
    <string-array name="sugar_array">
        <item>Dry</item>
        <item>Medium dry</item>
        <item>Medium sweet</item>
        <item>Sweet</item>
    </string-array>
    <string-array name="effervescence_array">
        <item>Not sparkling</item>
        <item>Light sparkling</item>
        <item>Medium sparkling</item>
        <item>High sparkling</item>
    </string-array>

    <!-- NFC -->

    <string name="title_activity_nfcscan">NFC Scan</string>
    <string name="nfc_logo">NFC Logo</string>

    <!-- Search fragment -->

    <string-array name="search_colour_array">
        <item>White</item>
        <item>Red</item>
        <item>Rosé</item>
        <item>All</item>
    </string-array>
    <string-array name="search_sugar_array">
        <item>Dry</item>
        <item>Medium dry</item>
        <item>Medium sweet</item>
        <item>Sweet</item>
        <item>All</item>
    </string-array>
    <string-array name="search_effervescence_array">
        <item>Not sparkling</item>
        <item>Light sparkling</item>
        <item>Medium sparkling</item>
        <item>High sparkling</item>
        <item>All</item>
    </string-array>

    <string name="search_add_variety">Add</string>
    <string name="search_checkbox_vintage_from">From</string>
    <string name="search_checkbox_vintage_to">To</string>
    <string name="search_checkbox_quantity_min">Min</string>
    <string name="search_checkbox_quantity_max">Max</string>
    <string name="search_checkbox_price_min">Min</string>
    <string name="search_checkbox_price_max">Max</string>
    <string name="search_checkbox_mark_min">Min</string>
    <string name="search_checkbox_mark_max">Max</string>
    <string name="search_checkbox_addDate_from">From</string>
    <string name="search_checkbox_addDate_to">To</string>
    <string name="search_checkbox_apogee_from">From</string>
    <string name="search_checkbox_apogee_to">To</string>
    <string name="search_action_find">OK</string>
    <string name="title_activity_generation_chooser">Type of Generation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nfcwriter">NFCWriterActivity</string>
    
    <string name="search_hint_appellation">Appellation</string>
    <string name="search_hint_name">Name</string>
    <string name="search_hint_vintage">1992</string>
    <string name="search_hint_region">Region</string>
    <string name="search_hint_quantity">42</string>
    <string name="search_hint_price">10.03</string>
    <string name="search_hint_variety">Variety</string>
    <string name="search_hint_code">999999</string>
    

</resources>