<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context="be.n4utiluss.wysiwyd.GenerationChooserActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/generation_chooser_image_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/generation_chooser_selection_background"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/generation_chooser_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/generation_chooser_title"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/generation_chooser_barcode_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxHeight="300dp"
                android:onClick="QRorBarCode"
                android:paddingRight="5dp"
                android:scaleType="fitEnd"
                android:src="@drawable/barcode_scan" />

            <ImageView
                android:id="@+id/generation_chooser_nfc_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxHeight="300dp"
                android:onClick="NFCCode"
                android:paddingLeft="5dp"
                android:scaleType="fitEnd"
                android:src="@drawable/nfc_scan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/generation_chooser_barcode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/generation_chooser_barcode_text"
                android:textSize="12sp"
                 />

            <TextView
                android:id="@+id/generation_chooser_nfc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/generation_chooser_nfc_text"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>